# inputd

./: Cargo.toml  README.md  example.toml
src/: config.rs  main.rs
